@@ -2,6 +2,10 @@ libass (0.9.12)
  * Switch to permissive (ISC) license
  * Support \fs+ and \fs- syntax for modifying font size
  * Fix word-wrapping
+ * Improved charmap fallback matching
+ * Handle a few more VSFilter quirks correctly
+ * Add a sensible default style
+ * Fix compilation against libpng 1.5
 
 libass (0.9.11)
  * Fix serious memory leaks
